e-commerce/home-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: home-app-ingress
  labels:
    app: home-app
spec:
  ingressClassName: nginx
  rules:
    - host: cbz.com
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: home-app-service
              port:
                number: 80
